k8s/57-zookeeper-service.yaml
# =============================================================================
# Wallet Service - Zookeeper Service
# =============================================================================

apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
  namespace: wallet-service
  labels:
    app: zookeeper
spec:
  type: ClusterIP
  ports:
    - port: 2181
      targetPort: zookeeper
      protocol: TCP
      name: zookeeper
  selector:
    app: zookeeper
